# NeoGUI

./: CMakeLists.txt  README.md
src/: NeoGUI.cpp  NeoGUI.h  main.cpp
src/config/: Colors.h
src/core/: CompileCommands.h  NeoGUICommandProvider.h  guiWindow.cpp  guiWindow.h
